# RAT

./: .gitignore  Cargo.toml  README.md  REATME.md
agent/: Cargo.toml
agent/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
controller/: Cargo.toml
controller/src/: main.rs
